New icon + fixes

--- a/ParkEasy/Sign Up/SIgnUp.storyboard
+++ b/ParkEasy/Sign Up/SIgnUp.storyboard
@@ -160,7 +160,7 @@
                                 <rect key="frame" x="0.0" y="140" width="414" height="756"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter verification code" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FDu-pD-Dnj">
-                                        <rect key="frame" x="124.00000000000001" y="150" width="166.33333333333337" height="30"/>
+                                        <rect key="frame" x="124" y="150" width="166" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
